<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".activity.ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_gravity="center"
            android:padding="@dimen/dp10"
            android:src="@drawable/ic_keyboard_backspace_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp50"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginStart="@dimen/dp20"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp25" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp130"
        android:layout_marginTop="@dimen/dp50"
        android:src="@drawable/changepass_3x" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/enter_new_pass"
        android:textColor="@color/colorBlack" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        app:cardCornerRadius="@dimen/dp10"
        app:cardElevation="@dimen/dp10"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30"
            android:layout_marginTop="@dimen/dp10"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_newpass"
                android:layout_marginTop="@dimen/dp30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_newpass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/sp14" />


                <ImageView
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:src="@drawable/password" />

            </LinearLayout>


            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/dp5"
                android:background="@color/colorGray" />

            <LinearLayout
                android:id="@+id/ll_confirmpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_confirmpass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/confirm_new_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/sp14" />


                <ImageView
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:src="@drawable/password" />

            </LinearLayout>


            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/dp5"
                android:background="@color/colorGray" />

            <Button
                android:id="@+id/bt_change"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp5"
                android:layout_marginTop="@dimen/dp30"
                android:background="@drawable/sp_button"
                android:paddingLeft="@dimen/dp20"
                android:paddingRight="@dimen/dp20"
                android:text="@string/change"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>