<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_signup"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_background"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                android:src="@drawable/hh1"
                />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:layout_marginTop="-60dp"
                app:cardCornerRadius="@dimen/dp10"
                app:cardElevation="@dimen/dp10"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp20"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp80"
                        android:layout_gravity="center"
                        android:src="@drawable/logo_3x"
                        android:layout_marginBottom="@dimen/dp10"
                        android:layout_marginTop="@dimen/dp10" />

                    <LinearLayout
                        android:id="@+id/ll_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp20"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/email_address"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/sp14" />

                        <ImageView
                            android:layout_width="@dimen/dp20"
                            android:layout_height="@dimen/dp20"
                            android:src="@drawable/email_3x" />

                    </LinearLayout>

                    <View
                        android:id="@+id/line1"
                        android:layout_marginTop="@dimen/dp5"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorGray" />

                    <LinearLayout
                        android:id="@+id/ll_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp20"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/password"
                            android:maxLength="20"
                            android:inputType="textPassword"
                            android:textSize="@dimen/sp14" />


                        <ImageView
                            android:layout_width="@dimen/dp20"
                            android:layout_height="@dimen/dp20"
                            android:src="@drawable/password" />

                    </LinearLayout>


                    <View
                        android:id="@+id/line"
                        android:layout_marginTop="@dimen/dp5"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorGray" />

                    <LinearLayout
                        android:id="@+id/ll_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp20"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_forgotpassword"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="@dimen/dp5"
                            android:text="@string/forgot_password"
                            android:textColor="@color/colorBlack"
                            android:layout_marginRight="@dimen/dp5" />

                        <Button
                            android:id="@+id/bt_login"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dp35"
                            android:layout_marginBottom="@dimen/dp5"
                            android:background="@drawable/sp_button"
                            android:text="@string/login"
                            android:textColor="@color/colorWhite" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/no_account"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

</RelativeLayout>